[Misc. DevOps] Fix data seeding for MariaDB (#230)
Seed data correctly into MariaDB so it can be used in local testing without the test runner.

--- a/docker-compose.integration-mariadb.yml
+++ b/docker-compose.integration-mariadb.yml
@@ -19,4 +19,4 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./data/sql/mariadb_example.sql:/docker-entrypoint-initdb.d/mariadb_example.sql
+      - ./data/sql/mariadb_example_schema.sql:/docker-entrypoint-initdb.d/mariadb_example_schema.sql
