updates for fidesctl init, add git url to reqs

--- a/fidesctl/.fides/fidesctl.toml
+++ b/fidesctl/.fides/fidesctl.toml
@@ -7,5 +7,11 @@ database_name = "fidesctl"
 
 test_database_name = "fidesctl_test"
 
+analytics_id = "b1b202153c5c1f681a944689fccce323"
+
 [cli]
 server_url = "http://fidesctl:8080"
+analytics_id = "5b1837ae7ac208e69dcd33fe4cf75405"
+
+[user]
+analytics_opt_out = true
