177 - Saas connectors post processing (#246)
Adds postprocessor support for SaaS Connectors

Co-authored-by: Adrian Galvan <adrian@ethyca.com>

--- a/data/saas/dataset/mailchimp_dataset.yml
+++ b/data/saas/dataset/mailchimp_dataset.yml
@@ -18,7 +18,7 @@ dataset:
           - name: subject
             data_categories: [system.operations]
           - name: message
-            data_categories: [system.operations]
+            data_categories: [user.provided.nonidentifiable]
           - name: read
             data_categories: [system.operations]
           - name: timestamp
@@ -31,6 +31,12 @@ dataset:
             data_categories: [system.operations]
           - name: list_id
             data_categories: [system.operations]
+          - name: from_email
+            data_categories: [user.provided.identifiable.contact.email]
+          - name: from_label
+            data_categories: [user.provided.identifiable.contact.email]
+          - name: subject
+            data_categories: [user.provided.nonidentifiable]
       - name: member
         fields:
           - name: id
