--- a/data/saas/config/mailchimp_config.yml
+++ b/data/saas/config/mailchimp_config.yml
@@ -23,55 +23,71 @@ saas_config:
 
   test_request:
     path: /3.0/lists
-    
+
   endpoints:
-    - name: messages
-      requests:
-        read:
-          path: /3.0/conversations/<conversation_id>/messages
-          request_params:
-            - name: conversation_id
-              type: path
-              references:
-                - dataset: mailchimp_connector_example
-                  field: conversations.id
-                  direction: from
-          data_path: conversation_messages
-    - name: conversations
-      requests:
-        read:
-          path: /3.0/conversations
-          request_params:
-            - name: count
-              type: query
-              default_value: 1000
-            - name: offset
-              type: query
-              default_value: 0
-            - name: placeholder
-              type: query
-              identity: email
-    - name: member
-      requests:
-        read:
-          path: /3.0/search-members
-          request_params:
-            - name: query
-              type: query
-              identity: email
-          data_path: exact_matches.members
-        update:
-          path: /3.0/lists/<list_id>/members/<subscriber_hash>
-          request_params:
-            - name: list_id
-              type: path
-              references:
-                - dataset: mailchimp_connector_example
-                  field: member.list_id
-                  direction: from
-            - name: subscriber_hash
-              type: path
-              references:
-                - dataset: mailchimp_connector_example
-                  field: member.id
-                  direction: from
+  - name: messages
+    requests:
+      read:
+        path: /3.0/conversations/<conversation_id>/messages
+        request_params:
+          - name: conversation_id
+            type: path
+            references:
+              - dataset: mailchimp_connector_example
+                field: conversations.id
+                direction: from
+        postprocessors:
+          - strategy: unwrap
+            configuration:
+              data_path: conversation_messages
+          - strategy: filter
+            configuration:
+              field: from_email
+              value:
+                identity: email
+  - name: conversations
+    requests:
+      read:
+        path: /3.0/conversations
+        request_params:
+          - name: count
+            type: query
+            default_value: 1000
+          - name: offset
+            type: query
+            default_value: 0
+          - name: placeholder
+            type: query
+            identity: email
+        postprocessors:
+          - strategy: unwrap
+            configuration:
+              data_path: conversations
+  - name: member
+    requests:
+      read:
+        path: /3.0/search-members
+        request_params:
+          - name: query
+            type: query
+            identity: email
+            data_type: string
+        postprocessors:
+          - strategy: unwrap
+            configuration:
+              data_path: exact_matches.members
+      update:
+        path: /3.0/lists/<list_id>/members/<subscriber_hash>
+        request_params:
+          - name: list_id
+            type: path
+            references:
+              - dataset: mailchimp_connector_example
+                field: member.list_id
+                direction: from
+          - name: subscriber_hash
+            type: path
+            references:
+              - dataset: mailchimp_connector_example
+                field: member.id
+                direction: from
