--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -17,6 +17,9 @@ nav:
       - Authenticate with OAuth: guides/oauth.md  
       - Connect SQL and NoSQL Databases: guides/database_connectors.md
       - Configure Datasets: guides/datasets.md
+      - Connect to SaaS Applications: guides/saas_connectors.md
+      - SaaS Configuration: guides/saas_config.md
+      - SaaS Post-Processors: guides/saas_postprocessors.md
       - Annotate Complex Fields: guides/complex_fields.md
       - Preview Query Execution: guides/query_execution.md  
       - Create Request Policies: guides/policies.md  
