Wrap CLI command execution in a `with_analytics` helper
The `with_analytics` wrapper function captures metadata about the
executed command before/during/after execution, and optionally sends an
`AnalyticsEvent` to the fideslog server based on user configuration.

--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -53,5 +53,8 @@ RUN pip install -e ".[all,mssql]"
 # Immediately flush to stdout, globally
 ENV PYTHONUNBUFFERED=TRUE
 
+# Enable detection of running within Docker
+ENV RUNNING_IN_DOCKER=TRUE
+
 EXPOSE 8080
 CMD ["fidesctl", "webserver"]
