[#228] Implement Privacy Center client app (#239)
* Implements initial privacy center layout

* Implement privacy request modal

* 80 Query Execution BigQuery (#215)

Adds query execution (access and erasure) support for BigQuery.

* makes client_id optional on the PrivacyRequest model

* makes PrivacyRequestCreate.requested_at optional, and default to datetime.utcnow() in the API view

* remove authentication requirements from privacy request create tests

* Update request format slightly

* Switch to babel for compilation to prevent swc build error

* Implement alerts

* Implement optionally required fields

* Move types out of ignored lib folder

* Commit updated files referring to types

* Tweak styles to match Figma designs

* Correct action card layout for all numbers of cards

* Correct logo placement behind alerts

* Correct merge changes

* Implement testing

* Document functionality in README

* Correct README header

* Correct deployment instructions

* Move test setup file to __tests__ folder

* simplify initial config

* Address PR comments

- Remove .env.development file as config lives in `config/config.json`
- Update docs to include instructions to `npm install`
- Add `test:ci` command
- Remove email validation from form
- Add anchor logo on 404 page

Co-authored-by: Catherine Smith <eastandwestwind@gmail.com>
Co-authored-by: Sean Preston <sean@ethyca.com>

--- a/fidesops.toml
+++ b/fidesops.toml
@@ -15,7 +15,7 @@ DB_INDEX=0
 
 [security]
 APP_ENCRYPTION_KEY="OLMkv91j8DHiDAULnK5Lxx3kSCov30b3"
-CORS_ORIGINS=["http://localhost", "http://localhost:8080"]
+CORS_ORIGINS=["http://localhost", "http://localhost:8080", "http://localhost:3000"]
 ENCODING="UTF-8"
 OAUTH_ROOT_CLIENT_ID="fidesopsadmin"
 OAUTH_ROOT_CLIENT_SECRET="fidesopsadminsecret"
