--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
       - Report on Privacy Requests: guides/reporting.md
       - Configure OneTrust Integration: guides/onetrust.md  
       - Configuration Reference: guides/configuration_reference.md
+      - Admin UI: guides/users.md
   - Deployment Guide: deployment.md
   - Glossary: glossary.md
   - API: api/index.md
