--- a/fidesops.toml
+++ b/fidesops.toml
@@ -21,6 +21,7 @@ OAUTH_ROOT_CLIENT_ID="fidesopsadmin"
 OAUTH_ROOT_CLIENT_SECRET="fidesopsadminsecret"
 
 [execution]
-TASK_RETRY_COUNT = 2
-TASK_RETRY_DELAY = 5
-TASK_RETRY_BACKOFF = 2
+TASK_RETRY_COUNT=2
+TASK_RETRY_DELAY=5
+TASK_RETRY_BACKOFF=2
+REQUIRE_MANUAL_REQUEST_APPROVAL=false
