Cleaning up SaaS tests (#278)
* Cleaning up SaaS tests to use different SaaS configs for unit tests vs integration tests

* Fixing Makefile

* Fixing pytest marks for pytest and pytest-saas make steps

* Fixing pytest marks

* Updating fixture

Co-authored-by: Adrian Galvan <adrian@ethyca.com>

--- a/.github/workflows/unsafe_pr_checks.yml
+++ b/.github/workflows/unsafe_pr_checks.yml
@@ -28,5 +28,5 @@ jobs:
           MAILCHIMP_DOMAIN: ${{ secrets.MAILCHIMP_DOMAIN }}
           MAILCHIMP_USERNAME: ${{ secrets.MAILCHIMP_USERNAME }}
           MAILCHIMP_API_KEY: ${{ secrets.MAILCHIMP_API_KEY }}
-          MAILCHIMP_ACCOUNT_EMAIL: ${{ secrets.MAILCHIMP_ACCOUNT_EMAIL }}
+          MAILCHIMP_IDENTITY_EMAIL: ${{ secrets.MAILCHIMP_IDENTITY_EMAIL }}
         run: make pytest-saas
