--- a/pytest.ini
+++ b/pytest.ini
@@ -13,7 +13,9 @@ markers =
     integration_snowflake
     integration_mariadb
     integration_bigquery
-    saas_connector
+    integration_saas
+    integration_mailchimp
+    unit_saas
 
 filterwarnings =
     ignore::DeprecationWarning:aiofiles.*:
