262 saas connector pagination strategies (#286)
* Implementations of offset, link, and cursor pagination

* Adding pagination to SaaS connector workflow
Updating documentation and Postman collection

* Fixing Pylint warning

* Updating unwrap postprocessor to accepts lists in addition to dicts
Accounting for the use case where the list of objects is at the root level of the response and does not need a data_path

* Adding missing test case

Co-authored-by: Adrian Galvan <adrian@ethyca.com>

--- a/data/saas/config/mailchimp_config.yml
+++ b/data/saas/config/mailchimp_config.yml
@@ -36,10 +36,8 @@ saas_config:
               - dataset: mailchimp_connector_example
                 field: conversations.id
                 direction: from
+        data_path: conversation_messages
         postprocessors:
-          - strategy: unwrap
-            configuration:
-              data_path: conversation_messages
           - strategy: filter
             configuration:
               field: from_email
@@ -59,10 +57,13 @@ saas_config:
           - name: placeholder
             type: query
             identity: email
-        postprocessors:
-          - strategy: unwrap
-            configuration:
-              data_path: conversations
+        data_path: conversations
+        pagination:
+          strategy: offset
+          configuration:
+            incremental_param: offset
+            increment_by: 1000
+            limit: 10000
   - name: member
     requests:
       read:
@@ -71,11 +72,7 @@ saas_config:
           - name: query
             type: query
             identity: email
-            data_type: string
-        postprocessors:
-          - strategy: unwrap
-            configuration:
-              data_path: exact_matches.members
+        data_path: exact_matches.members
       update:
         path: /3.0/lists/<list_id>/members/<subscriber_hash>
         request_params:
