--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
       - Connect to SaaS Applications: guides/saas_connectors.md
       - SaaS Configuration: guides/saas_config.md
       - SaaS Post-Processors: guides/saas_postprocessors.md
+      - SaaS Pagination: guides/saas_pagination.md
       - Annotate Complex Fields: guides/complex_fields.md
       - Preview Query Execution: guides/query_execution.md  
       - Create Request Policies: guides/policies.md  
