--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
         read_only: False
     environment:
       FIDESCTL_TEST_MODE: "True"
+      ANALYTICS_ID_OVERRIDE: ${FIDESCTL__CLI__ANALYTICS_ID:-}
 
   fidesctl-db:
     image: postgres:12
