Install fidesctl from source instead of pulling from pypi

--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -1,6 +1,12 @@
 name: Publish Docs
 
 on:
+  #For testing this PR
+  pull_request:
+    branches:
+      - main
+    paths:
+      - .github/**
   push:
     branches:
       - main
@@ -31,6 +37,9 @@ jobs:
 
       - name: Install Docs Requirements
         run: pip install -r docs/fides/requirements.txt
+
+      - name: Install fidesctl
+        run: pip install -e fidesctl/
 
       - name: Checkout the gh-pages branches
         run: git fetch origin gh-pages --depth=1
