--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -32,6 +32,9 @@ jobs:
       - name: Install Docs Requirements
         run: pip install -r docs/fides/requirements.txt
 
+      - name: Install fidesctl
+        run: pip install -e fidesctl/
+
       - name: Checkout the gh-pages branches
         run: git fetch origin gh-pages --depth=1
 
