--- a/fidesctl/demo_resources/demo_data_uses.yml
+++ b/fidesctl/demo_resources/demo_data_uses.yml
@@ -7,6 +7,7 @@ data_use:
     - IRS
     - NYDTF
     legal_basis: Legal Obligation
+    special_category: Employment
     parent_key: third_party_sharing.legal_obligation
   - fides_key: third_party_sharing.personalized_advertising.direct_marketing
     name: Direct Marketing
@@ -14,4 +15,5 @@ data_use:
     recipients: 
     - Processor - marketing co. 
     legal_basis: Consent
+    special_category: Consent
     parent_key: third_party_sharing.personalized_advertising
