--- a/fidesctl/demo_resources/demo_system.yml
+++ b/fidesctl/demo_resources/demo_system.yml
@@ -4,7 +4,7 @@ system:
     description: A system used for analyzing customer behaviour.
     system_type: Service
     administrating_department: Engineering
-    responsibility_role: Controller
+    data_responsibility_title: Controller
     third_country_transfers:
     - USA
     - CAN
@@ -24,7 +24,7 @@ system:
     name: Demo Marketing System
     description: Collect data about our users for marketing.
     system_type: Service
-    responsibility_role: Processor
+    data_responsibility_title: Processor
     privacy_declarations:
       - name: Collect data for marketing
         data_categories:
