Designate Role of Responsibility (Controller, Processor, Sub-Processor) (#412)
* modeling changes for responsibility_role

* include new attribute when exporting system

* replace string with enum key in model

* add new field to template, export data map with new attribute

* documentation

* resolve overlapping migration discrepancy

* Update fidesctl/demo_resources/demo_system.yml

Fixes issue with added white space, found during code review

Co-authored-by: Thomas <thomas.lapiana+github@pm.me>

* rename field to data_responsibility_title

* remove nullable() per review comment

Co-authored-by: Thomas <thomas.lapiana+github@pm.me>

--- a/fidesctl/demo_resources/demo_system.yml
+++ b/fidesctl/demo_resources/demo_system.yml
@@ -4,6 +4,7 @@ system:
     description: A system used for analyzing customer behaviour.
     system_type: Service
     administrating_department: Engineering
+    data_responsibility_title: Controller
     third_country_transfers:
     - USA
     - CAN
@@ -23,6 +24,7 @@ system:
     name: Demo Marketing System
     description: Collect data about our users for marketing.
     system_type: Service
+    data_responsibility_title: Processor
     privacy_declarations:
       - name: Collect data for marketing
         data_categories:
