Support Grouped Input Fields into a Collection [#290] (#299)
* Allow incoming fields to be specified on a saas config as being dependent on each other, not treated as an independent list of values.

- Update graph_task.pre_process_input_data to be able to optionally separate independent fields from dependent fields when processing incoming data into a collection.

* Add a test for pre_process_input_data when group_dependent_fields is set to True.

- Fix bug where nesting of adding data to output is happening in the wrong place.

* Add validation that grouped_inputs must all reference fields from the same collection.

* Fix bug where empty dict was being added to array.

* Fix bad yaml nesting and the fact that some extra endpoints were adding in the saas config test.

* Fix potential bug where collection name doesn't exist because it didn't pass validation.

* Add a test confirming if no grouped_input fields are specified, "fidesops_grouped_inputs" key just returns an empty list.

* Grouped_inputs fields may not exist.

* Allow grouped inputs to be reference or identity fields.

* Put building the dataset graphs within the try/except because if this fails, this will be swallowed and difficult to debug.

* Remove post-processor item that is being handled by separate PR.

* Responding to CR - when storing grouped_inputs on internal collections, use set representation.

* Set FIDESOPS_GROUPED_INPUTS key regardless.

* Add the fidesops_grouped_inputs keys - they are now included in all outputs.

- Switch the issubset.

* Change grouped_inputs list->set type where we merge collections for saas configs.

* Fix test after merge.

--- a/data/saas/config/saas_example_config.yml
+++ b/data/saas/config/saas_example_config.yml
@@ -113,3 +113,29 @@ saas_config:
           - name: version
             type: path
             connector_param: api_version
+  - name: projects
+    requests:
+      read:
+        path: /api/0/projects/
+        request_params:
+          - name: placeholder
+            type: query
+            identity: email
+  - name: user_feedback
+    requests:
+      read:
+        path: /api/0/projects/<organization_slug>/<project_slug>/user-feedback/
+        grouped_inputs: [ organization_slug, project_slug ]
+        request_params:
+          - name: organization_slug
+            type: path
+            references:
+              - dataset: saas_connector_example
+                field: projects.organization.slug
+                direction: from
+          - name: project_slug
+            type: path
+            references:
+              - dataset: saas_connector_example
+                field: projects.slug
+                direction: from
