--- a/data/saas/config/saas_example_config.yml
+++ b/data/saas/config/saas_example_config.yml
@@ -24,16 +24,17 @@ saas_config:
           connector_param: api_key
 
   test_request:
+    method: GET
     path: /3.0/lists
     
   endpoints:
   - name: messages
     requests:
       read:
+        method: GET
         path: /3.0/conversations/<conversation_id>/messages
-        request_params:
+        param_values:
           - name: conversation_id
-            type: path
             references:
               - dataset: saas_connector_example
                 field: conversations.id
@@ -50,16 +51,15 @@ saas_config:
   - name: conversations
     requests:
       read:
+        method: GET
         path: /3.0/conversations
-        request_params:
+        query_params:
           - name: count
-            type: query
-            default_value: 1000
+            value: 1000
           - name: offset
-            type: query
-            default_value: 0
+            value: 0
+        param_values:
           - name: placeholder
-            type: query
             identity: email
         postprocessors:
           - strategy: unwrap
@@ -68,27 +68,28 @@ saas_config:
   - name: member
     requests:
       read:
+        method: GET
         path: /3.0/search-members
-        request_params:
+        query_params:
           - name: query
-            type: query
+            value: <email>
+        param_values:
+          - name: email
             identity: email
-            data_type: string
         postprocessors:
           - strategy: unwrap
             configuration:
               data_path: exact_matches.members
       update:
+        method: PUT
         path: /3.0/lists/<list_id>/members/<subscriber_hash>
-        request_params:
+        param_values:
           - name: list_id
-            type: path
             references:
               - dataset: saas_connector_example
                 field: member.list_id
                 direction: from
           - name: subscriber_hash
-            type: path
             references:
               - dataset: saas_connector_example
                 field: member.id
@@ -96,45 +97,56 @@ saas_config:
   - name: payment_methods
     requests:
       read:
+        method: GET
         path: /<version>/payment_methods
-        request_params:
+        headers:
+          - name: Content-Type
+            value: application/json
+          - name: On-Behalf-Of
+            value: <email>
+          - name: Token
+            value: Custom <api_key> 
+        query_params:
           - name: limit
-            type: query
+            value: <limit>
+          - name: query
+            value: <email>
+        param_values:
+          - name: limit
             connector_param: page_limit
           - name: version
-            type: path
             connector_param: api_version
-          - name: query
-            type: query
+          - name: email
             identity: email
+          - name: api_key
+            connector_param: api_key
       update:
+        method: PUT
         path: /<version>/payment_methods
-        request_params:
+        param_values:
           - name: version
-            type: path
             connector_param: api_version
   - name: projects
     requests:
       read:
+        method: GET
         path: /api/0/projects/
-        request_params:
+        param_values:
           - name: placeholder
-            type: query
             identity: email
   - name: user_feedback
     requests:
       read:
+        method: GET
         path: /api/0/projects/<organization_slug>/<project_slug>/user-feedback/
         grouped_inputs: [ organization_slug, project_slug ]
-        request_params:
+        param_values:
           - name: organization_slug
-            type: path
             references:
               - dataset: saas_connector_example
                 field: projects.organization.slug
                 direction: from
           - name: project_slug
-            type: path
             references:
               - dataset: saas_connector_example
                 field: projects.slug
