Support Dependent Identity Data and "After" Param in Saas Configs [#291] (#306)
* Allow the "after" param to be optionally specified on a saas config endpoint.

* WIP If a collection has grouped identity data, meaning it is dependent on other inputs, combine the seed data with the other grouped inputs when processing the data to be fed into the current collection.

* Add tests for "after" query param on saas configs and that identity data is grouped with other dependent fields if it is listed as a grouped_input.

- Pull identity data off from the data that is passed into the collection, instead of out of the cache for consistency.
- Revert a hardcoded static portion of a query param used in local testing.

* Make corresponding change to saas dataset.

* Remove double quotes.

* Fix bad docs merge.

* Fix missed import.

* Respond to CR.

--- a/data/saas/config/saas_example_config.yml
+++ b/data/saas/config/saas_example_config.yml
@@ -105,7 +105,7 @@ saas_config:
           - name: On-Behalf-Of
             value: <email>
           - name: Token
-            value: Custom <api_key> 
+            value: Custom <api_key>
         query_params:
           - name: limit
             value: <limit>
@@ -134,12 +134,16 @@ saas_config:
         param_values:
           - name: placeholder
             identity: email
-  - name: user_feedback
+  - name: users
+    after: [ saas_connector_example.projects ]
     requests:
       read:
         method: GET
         path: /api/0/projects/<organization_slug>/<project_slug>/user-feedback/
-        grouped_inputs: [ organization_slug, project_slug ]
+        query_params:
+          - name: query
+            value: <query>
+        grouped_inputs: [ organization_slug, project_slug, query ]
         param_values:
           - name: organization_slug
             references:
@@ -151,3 +155,5 @@ saas_config:
               - dataset: saas_connector_example
                 field: projects.slug
                 direction: from
+          - name: query
+            identity: email
