--- a/data/saas/dataset/saas_example_dataset.yml
+++ b/data/saas/dataset/saas_example_dataset.yml
@@ -162,7 +162,7 @@ dataset:
               - name: slug
                 fidesops_meta:
                   data_type: string
-      - name: user_feedback
+      - name: users
         fields:
           - name: id
             data_categories: [ system.operations ]
