[Saas Connectors] Configure Ignore Non-200 Responses [#307] (#326)
* Allow ignore_errors to be specified on a specific saas config request. If ignore_errors is True, an empty Response is returned when an error is encountered on a third party endpoint. The default is False.  This can be extended to more complex behavior in the future.

--- a/data/saas/config/saas_example_config.yml
+++ b/data/saas/config/saas_example_config.yml
@@ -52,6 +52,7 @@ saas_config:
     requests:
       read:
         method: GET
+        ignore_errors: true
         path: /3.0/conversations
         query_params:
           - name: count
