--- a/fidesctl/demo_resources/demo_data_subjects.yml
+++ b/fidesctl/demo_resources/demo_data_subjects.yml
@@ -2,5 +2,12 @@ data_subject:
   - fides_key: potential_customer
     name: Potential Customer
     description: A prospective individual or other organization that purchases goods or services from the organization.
-    rights_available: Deletion
+    rights:
+      strategy: INCLUDE
+      values:
+      - Informed
+      - Access
+      - Rectification
+      - Erasure
+      - Object
     automated_decisions_or_profiling: true
