--- a/fidesctl/.fides/fidesctl.toml
+++ b/fidesctl/.fides/fidesctl.toml
@@ -4,11 +4,11 @@ database_password = "fidesctl"
 database_host = "fidesctl-db"
 database_port = "5432"
 database_name = "fidesctl"
-
 test_database_name = "fidesctl_test"
 
 [cli]
 server_url = "http://fidesctl:8080"
+analytics_id = "internal"
 
 [user]
 analytics_opt_out = false
